k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-sample-app
  namespace: secure-sample-app
  labels:
    app.kubernetes.io/name: secure-sample-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: secure-sample-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
